name:          calamine
version:       0.1.0.0
synopsis:      JAR file ABI tools
description:   JAR file ABI tools
homepage:      http://github.com/jystic/calamine
license:       BSD3
license-file:  LICENSE
author:        Jacob Stanley
maintainer:    jacob@stanley.io
copyright:     (c) 2015 Jacob Stanley
category:      Development
build-type:    Simple
cabal-version: >= 1.10

executable calamine
  main-is: Main.hs
  hs-source-dirs: src
  default-language: Haskell2010

  build-depends:
      base       >= 4.8 && < 4.9
    , jvm-parser >= 0.2.1

    -- Stackage
    , async
    , bytestring
    , directory
    , filepath
    , http-client
    , http-client-tls
    , http-types
    , mtl
    , network
    , stm
    , text
    , transformers
